tests/NormalTests/paczka1/fuzzy1/17352196.err
Error in line 2: A352 S525 12,3
Error in line 15: OocqE S932 70,4
Error in line 19: 3h1OPWDsj S932 23,3
Error in line 30: OocqE S819 1,25
Error in line 28: 3h1OPWDsj A352 97,9
Error in line 38: A352 S525 54,9
